# JavSP

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  config.yml  config_default.yml  pyproject.toml  renovate.json  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/actions/freeze-build/: action.yml
.github/workflows/: codeql.yml  cx_freeze.yml  docker-build.yml  release.yml  test-basic-funcs.yml  test-web-funcs.yml
docker/: Dockerfile
javsp/: __main__.py  __version__.py  avid.py  chromium.py  config.py  datatype.py  dispatcher.py  file.py  func.py  image.py  lib.py  nfo.py  print.py  processor.py  prompt.py  summarizer.py
javsp/cropper/: __init__.py  interface.py  slimeface_crop.py  utils.py
javsp/web/: arzon.py  arzon_iv.py  avsox.py  avwiki.py  base.py  dl_getchu.py  fanza.py  fc2.py  fc2fan.py  fc2ppvdb.py  gyutto.py  jav321.py  javbus.py  javdb.py  javlib.py  javmenu.py  mgstage.py  njav.py  prestige.py  proxyfree.py  translate.py
tools/: call_crawler.py  check_genre.py  config_migration.py  version.py
unittest/: conftest.py  test_avid.py  test_crawlers.py  test_exe.py  test_file.py  test_lib.py  test_proxyfree.py  test_subtitle.py  test_translate.py
unittest/data/: 145dmn000007 (fanza).json  145tb017 (fanza).json  1stars931r (fanza).json  62knbm009 (fanza).json  FC2-1899973 (javmenu).json  FC2-2764073 (javmenu).json  FC2-718323 (javmenu).json  IPX-177 (javdb).json  IPX-177 (javmenu).json  SSIS-698 (avwiki).json  STARS-256 (javdb).json  hjmo00214 (fanza).json  parathd03639 (fanza).json
